# software_opt_tech

ex_1_6/: ex_1_6.h  method_1.cpp  method_2.cpp  method_3.cpp  method_4.cpp  rand.cpp  timer.cpp
ex_2_3/: cnt_one.cpp  ex2_3.h  prefix_zero.cpp  win_timer.cpp
ex_2_8/: baseline.cpp  block_cmp_result.txt  block_res.txt  matrix_block.cpp  matrix_block.h  test_block.cpp  verify.cpp
ex_3_0/: CMakeLists.txt  avx_O0.txt  avx_res.txt  avx_test.cpp  avx_test_result.txt  matrix_mul_avx.cpp  matrix_mul_avx.h  matrix_mul_simd.cpp  matrix_mul_simd.h  matrix_mul_sse.cpp  sse_O0.txt  sse_res.txt  sse_test.cpp  sse_test_result.txt  test.cpp  verify.cpp
ex_3_0_1/: CMakeLists.txt  c.h  scan_like_operations.cpp  scan_like_operations.h  search.cpp  search.h  test.cpp  test_match.cpp
final/: multi_test.cpp  multi_thread_simd.h  rand_matrix.cpp  rand_matrix.h
matrix_cal/: CMakeLists.txt  matrix_block.h  matrix_mul_avx.cpp  matrix_mul_avx.h  test.cpp
test/: baseline.cpp  baseline.h  matrix_block.cpp  matrix_block.h  matrix_mul_simd.h  multi_thread_simd.cpp  simd_test.cpp
